--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <section>
       <div class="login">
-        <h2>SIGN IN</h2>
+        <h2>SIGN IN PAGE</h2>
         <div class="inputBox">
           <input type="text" placeholder="Username" />
         </div>
